infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: {specify a namespace here, default by default}
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      port: 27017
      #default port for mongo
      targetPort: 27017
    #port for monitoring mongodb
    - name: mongodb-exporter
      protocol: TCP
      port: 9216
      targetPort: 9216
